# 3D-Reconstruction

./: .gitignore  CMakeLists.txt  PanStyle.cpp  PanStyle.h  ReconstructionPipeline.cpp  ReconstructionPipeline.h  ReconstructionWorker.h  aiprocessor.cpp  aiprocessor.h  config.ini  crosshairManager.cpp  crosshairManager.h  dicomloader.cpp  dicomloader.h  image2dloader.cpp  image2dloader.h  main.cpp  mainwindow.cpp  mainwindow.h  model3dloader.cpp  reconstructthread.h  train_model.py
3DModels/: Audi_R8_2017.mtl  FinalBaseMesh.mtl  cube.mtl
AITraining/: StartChatbotServer.py  TrainModel.py
Config/: config.ini
Dicom/HippocampalMRISlices/02/: MR.1.2.246.352.221.461807172074292650715684923661762061209.dcm  MR.1.2.246.352.221.462348759731752298110699888939509123753.dcm  MR.1.2.246.352.221.46239981867243029456412905013400804031.dcm  MR.1.2.246.352.221.46270838540737562907810254502366987413.dcm  MR.1.2.246.352.221.463041105562760726713887398496998150840.dcm  MR.1.2.246.352.221.464379522738514369610913720307880005515.dcm  MR.1.2.246.352.221.46445977218450981224683194119890094469.dcm  MR.1.2.246.352.221.46495582722551842979294556899579567021.dcm  MR.1.2.246.352.221.465217547095759087211021193232402826404.dcm  MR.1.2.246.352.221.46538976192436678427880095798502075023.dcm  MR.1.2.246.352.221.465548345241066707511359609141728881841.dcm  MR.1.2.246.352.221.46569799656722894492206342927088429992.dcm  MR.1.2.246.352.221.46594867604324821831193779829778037410.dcm  MR.1.2.246.352.221.466402368339859622314446729815004576662.dcm  MR.1.2.246.352.221.466447147181529871710886222130990860472.dcm  MR.1.2.246.352.221.46674175419995632325205023732735515573.dcm  MR.1.2.246.352.221.4670525474414928557783955939837081987.dcm  MR.1.2.246.352.221.46746696887455851462582402552446641541.dcm  MR.1.2.246.352.221.46760077162858069176239710564201795232.dcm  MR.1.2.246.352.221.468910218173783081211490859287309435808.dcm  MR.1.2.246.352.221.46962312938228153538842943192231719827.dcm  MR.1.2.246.352.221.47002397390306837619191777631714719906.dcm  MR.1.2.246.352.221.4703919215052487572534317490624787106.dcm  MR.1.2.246.352.221.470440100512288684913851205612949921695.dcm  MR.1.2.246.352.221.470811676179049381610667452252972236721.dcm  MR.1.2.246.352.221.47137439132522450419055681376799442104.dcm  MR.1.2.246.352.221.47302148332726063009253257311168292278.dcm  MR.1.2.246.352.221.473403393055174212211054820228134208174.dcm  MR.1.2.246.352.221.473432088829147274815052233435265210774.dcm  MR.1.2.246.352.221.473565736902569338317181211059056278163.dcm  MR.1.2.246.352.221.47361206065265958958422734261773080480.dcm  MR.1.2.246.352.221.47361957998495739022148153087285679518.dcm  MR.1.2.246.352.221.474439559112195060613186567461683250572.dcm  MR.1.2.246.352.221.474592900296903439712684931595464296127.dcm  MR.1.2.246.352.221.474761860448477725114393901509500077959.dcm  MR.1.2.246.352.221.47480858569069737576893516471445738416.dcm  MR.1.2.246.352.221.47606921984767025885900892493888373895.dcm  MR.1.2.246.352.221.476151496404968140717684698248346739076.dcm  MR.1.2.246.352.221.476694551958910986115828497543303620250.dcm  MR.1.2.246.352.221.47684107891763976912164256339408360833.dcm  (+253 more)
Dicom/HippocampalMRISlices/03/: MR.1.2.246.352.221.461353646717882242512568263582430053506.dcm  MR.1.2.246.352.221.46149968043654679483343913396598202529.dcm  MR.1.2.246.352.221.46199696031247068062410935448691222407.dcm  MR.1.2.246.352.221.46200256931041602381206967882546095544.dcm  MR.1.2.246.352.221.462431495500559726111999057090954220420.dcm  MR.1.2.246.352.221.46260380247094753376672611077001847993.dcm  MR.1.2.246.352.221.46318204143539490301869166683174925216.dcm  MR.1.2.246.352.221.463332119368496635912123942521716563363.dcm  MR.1.2.246.352.221.46333866048629268298190990002435157180.dcm  MR.1.2.246.352.221.463990078279823808914675522548307163580.dcm  MR.1.2.246.352.221.46443694208644771805842139631484049335.dcm  MR.1.2.246.352.221.465193618925054401016320292291582302089.dcm  MR.1.2.246.352.221.465361085766600737416754971491479858852.dcm  MR.1.2.246.352.221.466307358486878506412753810379289637052.dcm  MR.1.2.246.352.221.46678584492423758008516735773459614616.dcm  MR.1.2.246.352.221.467121352608468688116619708318182996629.dcm  MR.1.2.246.352.221.46721059290974910637656934982263238050.dcm  MR.1.2.246.352.221.46756076279523757909568049860468294577.dcm  MR.1.2.246.352.221.46768721842959206902762487618357006003.dcm  MR.1.2.246.352.221.468353234462825871416116420095318231429.dcm  MR.1.2.246.352.221.468539453503865129518239306200473690534.dcm  MR.1.2.246.352.221.46872077426843387112659492720576754059.dcm  MR.1.2.246.352.221.469042811894590573010966131562293810615.dcm  MR.1.2.246.352.221.469664522665967850515899396186995666598.dcm  MR.1.2.246.352.221.47002785543355692259180752476597405364.dcm  MR.1.2.246.352.221.470076875899234535311626784496093004969.dcm  MR.1.2.246.352.221.470244495618461007212985876201922351247.dcm  MR.1.2.246.352.221.47050859562492524106070340853516649630.dcm  MR.1.2.246.352.221.47051776986001563356779691343811238063.dcm  MR.1.2.246.352.221.47088293263527373985926119949969929884.dcm  MR.1.2.246.352.221.4714257970095263111117093243916488888.dcm  MR.1.2.246.352.221.471572321802648538713822723218844167563.dcm  MR.1.2.246.352.221.47182723062247169043930121868334017708.dcm  MR.1.2.246.352.221.47187920181529807814817889120484200083.dcm  MR.1.2.246.352.221.47197173445443078763288521288376112266.dcm  MR.1.2.246.352.221.47201421768708540394556756200107946373.dcm  MR.1.2.246.352.221.472114350213599016914692481178326769805.dcm  MR.1.2.246.352.221.47214834046989817776768673044448264362.dcm  (+355 more)
Dicom/INME VERI SETI/: 14969.dcm  15861.dcm  16012.dcm
Doxygen/: Doxyfile  README.md
Includes/: AIAssistant.h  MainWindow.h  Model3DLoader.h  PanStyle.h  ReconstructThread.h  ReconstructionPipeline.h  ReconstructionWorker.h
IronMan/: IronMan.mtl
Source/: AIAssistant.cpp  AIProcessor.cpp  DicomLoader.cpp  Image2DLoader.cpp  Main.cpp  MainWindow.cpp  Model3DLoader.cpp  ReconstructThread.cpp  ReconstructionPipeline.cpp
dataset/: data.yaml
(+7517 files in other folders)
